+views, routs, tests for pages_cont

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: simtrans_development
   pool: 5
   username: root
-  password:
+  password: q
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test:
   database: simtrans_test
   pool: 5
   username: root
-  password:
+  password: q
   host: localhost
 
 production:
@@ -38,5 +38,5 @@ production:
   database: simtrans_production
   pool: 5
   username: root
-  password:
+  password: q
   host: localhost
